@@ -21,6 +21,8 @@ Date: 2025-05-23
     - Fixed biusart lab graphics (before it was low res)
     - Fixed changelog visibility in game
     - Fixed material science pack 2 not being required as input cost fore some sciences that came after it
+    - Fixed ingredients for lithium processing tech
+    - Fixed integrated circuit tech not requiring polyvinl fluoride tech
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.15
 Date: 2025-05-16
